Made changes to fix alignment issues in the game container. Video and right info section are now aligned.

--- a/games/static/css/games_desc.css
+++ b/games/static/css/games_desc.css
@@ -32,13 +32,23 @@ body{
 
 .game_container{
     display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .right_info{
     flex: 1;
     display: flex;
     flex-direction: column;
-    margin-top: 5px;
+    margin-top: 3px;
+    background-color: aliceblue;
+    padding: 10px;
+    height: 100%;
+    align-items: flex-end;
+    box-sizing: border-box;
+
+    border-radius: 10px;
+
 }
 
 .game_image img{
@@ -71,7 +81,6 @@ body{
     color: var(--tag_text_colour);
     margin-right: 4px;
     margin-bottom: 4px;
-
 }
 
 .desc_ans{}
